bk_ida/gccida/g1/has_cleanups
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2445:1: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rbp 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2445:36: error: use of undeclared identifier 'p_int_cst'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rbp 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2487:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)v3); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:1314:1: note: 'tree_cons' declared here
tree_cons (purpose, value, chain)
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2487:36: error: expected ')'
rtl_op = first_rtl_op( ( tree_code)v3); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2487:22: note: to match this '('
rtl_op = first_rtl_op( ( tree_code)v3); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2490:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &exp->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2494:7: error: use of undeclared identifier 'p_int_cst'
low = p_int_cst->low; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2495:6: error: use of undeclared identifier 'p_int_cst'
if ( p_int_cst->low ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2505:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2505:50: error: expected expression
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2505:15: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2505:62: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2506:56: error: expected expression
if ( p_int_cst == ( $A887AD9C3C6C8CC7716950D571F57C9D *)v7 ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2506:21: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
if ( p_int_cst == ( $A887AD9C3C6C8CC7716950D571F57C9D *)v7 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/tree.c:2506:6: error: use of undeclared identifier 'p_int_cst'
if ( p_int_cst == ( $A887AD9C3C6C8CC7716950D571F57C9D *)v7 ) 
     ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/has_cleanups/src/obj/tree.o] Error 1
